--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^4.10.3",
+    "babel-plugin-import": "^1.13.3",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
