--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
+    "@types/lodash": "^4.14.168",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.10.3",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
+    "highlight.js": "^10.5.0",
+    "markdown-navbar": "^1.4.3",
+    "marked": "^1.2.7",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3"
   }
 }
